# ChangeLog for sys-cluster/drbd
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/drbd/ChangeLog,v 1.49 2006/08/10 11:24:42 xmerlin Exp $

  18 Jul 2006; Christian Zoffoli <xmerlin@gentoo.org> drbd-0.7.20.ebuild:
  Stable x86.

  14 Jul 2006; Christian Zoffoli <xmerlin@gentoo.org> drbd-8.0_pre3.ebuild:
  Removed old doc install.

*drbd-0.7.20 (12 Jul 2006)
  12 Jul 2006; Christian Zoffoli <xmerlin@gentoo.org> +drbd-0.7.20.ebuild:
  Version bump.

*drbd-0.7.19 (12 Jul 2006)
  12 Jul 2006; Christian Zoffoli <xmerlin@gentoo.org> drbd-0.7.19.ebuild:
  Stable x86.

*drbd-8.0_pre3 (04 Jun 2006)

  04 Jun 2006; Christian Zoffoli <xmerlin@gentoo.org> +drbd-8.0_pre3.ebuild:
  Version bump.

*drbd-0.7.19 (27 May 2006)

  27 May 2006; Christian Zoffoli <xmerlin@gentoo.org> +drbd-0.7.19.ebuild:
  Version bump.

  20 May 2006; Christian Zoffoli <xmerlin@gentoo.org> drbd-0.7.18.ebuild:
  Stable x86.

  20 May 2006; Christian Zoffoli <xmerlin@gentoo.org> -drbd-0.7.10.ebuild,
  -drbd-0.7.14.ebuild, -drbd-0.7.15.ebuild, -drbd-0.7.16.ebuild:
  Removed old ebuilds.

  20 May 2006; Christian Zoffoli <xmerlin@gentoo.org> -files/drbd-0.7-init,
  +files/drbd-0.7.rc, drbd-0.7.10.ebuild, drbd-0.7.11.ebuild,
  drbd-0.7.14.ebuild, drbd-0.7.15.ebuild, drbd-0.7.16.ebuild,
  drbd-0.7.17.ebuild, drbd-0.7.18.ebuild:
  Ebuild cleanup.

*drbd-0.7.18 (10 May 2006)

  10 May 2006; Christian Zoffoli <xmerlin@gentoo.org> +drbd-0.7.18.ebuild:
  Version Bump, closed bug #132683.

  24 Mar 2006; Christian Zoffoli <xmerlin@gentoo.org> drbd-0.7.17.ebuild:
  Stable x86.

*drbd-0.7.17 (13 Mar 2006)

  13 Mar 2006; Christian Zoffoli <xmerlin@gentoo.org> +drbd-0.7.17.ebuild:
  Version bump.

*drbd-0.7.16 (27 Feb 2006)

  27 Feb 2006; Christian Zoffoli <xmerlin@gentoo.org> drbd-0.7.14.ebuild,
  +drbd-0.7.16.ebuild:
  Version bump.

*drbd-0.7.15 (09 Jan 2006)

  09 Jan 2006; Christian Zoffoli <xmerlin@gentoo.org> +drbd-0.7.15.ebuild: