@@ -35,7 +35,9 @@ DIST drbd-0.7.17.tar.gz 286720 RMD160 a23bd72f06e69381e32078e59478acc64f765ef7 S
 DIST drbd-0.7.18.tar.gz 286720 RMD160 764a92e974cd683a919f73168d33396c45cd6b4f SHA1 6ed5f1a6d9be6b11c40365004393913945342159 SHA256 cae101b4d7c6a03060d8322a8f0e6969809bd2158f4ee658e3ea58734233c9f2
 DIST drbd-0.7.19.tar.gz 286720 RMD160 dfbca46ec9f7dd3b925f8fd85e81c337361cf151 SHA1 590c5c33d5396e2d628bec955f33aaca604473fc SHA256 37fa4cd0cc1a125d32fb343c029590286e8fc8bb1dc9db40048802c4a0867630
 DIST drbd-0.7.20.tar.gz 296960 RMD160 c28d9c6fb52d40b09bbcf0ce840524692e5205d7 SHA1 4a8e7f7e7e5815e25988632832f00d62642c7b76 SHA256 c1d2cc6c8fc85f8daf56613b798ab3ffdf2702c12dd1f1a2755781c376d3a46b
+DIST drbd-0.7.21.tar.gz 296960 RMD160 331c887d61f2da3bd63dcd25dfe8fede3659efda SHA1 16cb634fa4c6ba8927ec02f2b1145fb4b45d7522 SHA256 f0b01c6504754619ad388c3e82d2ca4842d1071f62e2d879abb027025efe43ca
 DIST drbd-8.0pre3.tar.gz 337920 RMD160 9e1f8629249d18e42dd3c1841e5dffb00ec0588d SHA1 32549d06b2cd1f16ad1749d5ca26dc4c7ca8ff9d SHA256 e5493b7ec679a4ee4c28bdf38fcdb68d46cd1792a632f654df888bbdc7e4ae12
+DIST drbd-8.0pre4.tar.gz 430080 RMD160 d830dc0b91228147d41d30371c8217d090dddbbf SHA1 c934b10455633cda2ef55d65bcb1a3638bbb705e SHA256 8efa75c90db1af095aed8306d0d07caec31f4d55f9482c739dbf3c96f805d258
 EBUILD drbd-0.6.12-r1.ebuild 2147 RMD160 1c2fe42d85fbec9070731694a9b1d5af044ffa0f SHA1 7723fcb9d6114a97b9ec981f5535296a52a875ad SHA256 0c83a85d4a9d18c6b6bbf5fe4dd4341fc875dbaf77117444fb474af28a328b40
 MD5 028f168b40983177f6460d8e579e5487 drbd-0.6.12-r1.ebuild 2147
 RMD160 1c2fe42d85fbec9070731694a9b1d5af044ffa0f drbd-0.6.12-r1.ebuild 2147
@@ -60,14 +62,22 @@ EBUILD drbd-0.7.20.ebuild 1929 RMD160 bfda3f72c1bbc461dacab3738b0a7fca98fa8b0d S
 MD5 480c83004be5213b74ed3d177cc8f4e1 drbd-0.7.20.ebuild 1929
 RMD160 bfda3f72c1bbc461dacab3738b0a7fca98fa8b0d drbd-0.7.20.ebuild 1929
 SHA256 2ae65a853560477720b4827b208705dbe6108e1358921d174579052aef5b69eb drbd-0.7.20.ebuild 1929
+EBUILD drbd-0.7.21.ebuild 1930 RMD160 ad13b5b2871e998ebd43625be67b9d7b444f3d45 SHA1 4d0a0adbde1bfeb42d0cebe98434aaa9fbb3a06f SHA256 25b2e143ca6b42fad18fee98ca7c11c706b7f04c9f1fc492da4e88ffc170ecf6
+MD5 6461ed0f566df77bb9a320cd302e11e8 drbd-0.7.21.ebuild 1930
+RMD160 ad13b5b2871e998ebd43625be67b9d7b444f3d45 drbd-0.7.21.ebuild 1930
+SHA256 25b2e143ca6b42fad18fee98ca7c11c706b7f04c9f1fc492da4e88ffc170ecf6 drbd-0.7.21.ebuild 1930
 EBUILD drbd-8.0_pre3.ebuild 2056 RMD160 c9acd2735ddb2ce2bae08ff5670d1256bd10788a SHA1 9d15728b88ef774a550826726b9f69eba1c5c5ba SHA256 bb693a9711f8cabb214fb59e076bbe52bbe651e3662c87fd3bf2eddd63057ce3
 MD5 3d92b844183e5f680afcb526b6518b1d drbd-8.0_pre3.ebuild 2056
 RMD160 c9acd2735ddb2ce2bae08ff5670d1256bd10788a drbd-8.0_pre3.ebuild 2056
 SHA256 bb693a9711f8cabb214fb59e076bbe52bbe651e3662c87fd3bf2eddd63057ce3 drbd-8.0_pre3.ebuild 2056
-MISC ChangeLog 8358 RMD160 66dabfc5394e0d2d046452dda12304355b7b0a1f SHA1 e69b13ecf63302c068de89e50185e08c688d4877 SHA256 a8a6da69b7c60345fbb401e565fbc5363f43c12e1538471e09f0bc5ad3a9e912
-MD5 ff2441c7ab55c5374a21a6cc6aac4814 ChangeLog 8358
-RMD160 66dabfc5394e0d2d046452dda12304355b7b0a1f ChangeLog 8358
-SHA256 a8a6da69b7c60345fbb401e565fbc5363f43c12e1538471e09f0bc5ad3a9e912 ChangeLog 8358
+EBUILD drbd-8.0_pre4.ebuild 2056 RMD160 142576419854748c425b11e7a0c4b7933ce8989f SHA1 b54788357bec1e91dfe62ffce5f92ab85c0e8851 SHA256 d79768035cbd1a46e48d2882dcf95e3ea0ad6b724beeb2c76bfc11cf761cd76a
+MD5 222f6722e84f5e831dd0189f84a78228 drbd-8.0_pre4.ebuild 2056
+RMD160 142576419854748c425b11e7a0c4b7933ce8989f drbd-8.0_pre4.ebuild 2056
+SHA256 d79768035cbd1a46e48d2882dcf95e3ea0ad6b724beeb2c76bfc11cf761cd76a drbd-8.0_pre4.ebuild 2056
+MISC ChangeLog 8533 RMD160 a2b03a7c8a0f71f6b844fdd8e578376fcfbe582d SHA1 49e6d0ed62c15bb1c12a6abe77fe8fe0053b50af SHA256 543fe6fd0de01d1fa985725c3df5060ae70b2fed4b7bf333a43be3dab9e92230
+MD5 781b718aa86888efc32b5579e928d9e1 ChangeLog 8533
+RMD160 a2b03a7c8a0f71f6b844fdd8e578376fcfbe582d ChangeLog 8533
+SHA256 543fe6fd0de01d1fa985725c3df5060ae70b2fed4b7bf333a43be3dab9e92230 ChangeLog 8533
 MISC metadata.xml 223 RMD160 f9651ff0237b684fc6b65b83bb9140623b669a6d SHA1 033d2c47eb2bfe68e657ac2d68a7bfd28aab5b22 SHA256 b75b89c431f244420a0c81f9157c9fc656a919a8aac011778e1b410f70851bd3
 MD5 a64b9a1937a5cfc2fbaf373521f65d47 metadata.xml 223
 RMD160 f9651ff0237b684fc6b65b83bb9140623b669a6d metadata.xml 223
@@ -90,13 +100,19 @@ SHA256 29a441fb23a0877eb538c1e1b425fa4c6f28331cbb364674a7dffea489dda76f files/di
 MD5 d00e9a54c3fb3fa6d9c9bfc9eb30b26c files/digest-drbd-0.7.20 235
 RMD160 c738dca0ef914e15cacb0340c41adf033251f82e files/digest-drbd-0.7.20 235
 SHA256 0a65a84d3b019e10c15291ed87d74f86fa604d2088ea61c6940034777551d542 files/digest-drbd-0.7.20 235
+MD5 cf3c9aa740125d9b88c69306f51ba586 files/digest-drbd-0.7.21 235
+RMD160 98f4bf5e4960ea2d11a8298ff0f5722aa7a98ae8 files/digest-drbd-0.7.21 235
+SHA256 e9c51010416313eadcf3a59755471b36965b48e23c4fc9933ff7b12f45dd64b3 files/digest-drbd-0.7.21 235
 MD5 caff5792455ae32679350c779d093626 files/digest-drbd-8.0_pre3 238
 RMD160 7ebdfba0848a6ec98f8ce96ca45aec3e5c8289b8 files/digest-drbd-8.0_pre3 238
 SHA256 26fa9377d3c636ea538866a6f5bb052be304b46c62026ab9c8ce38dd134b4d7c files/digest-drbd-8.0_pre3 238
+MD5 592df24a5115ac9c216434dc90cd140c files/digest-drbd-8.0_pre4 238
+RMD160 b0ad93537f16b1d27e926ae1c33f27f0592ebfef files/digest-drbd-8.0_pre4 238
+SHA256 cd660ef35458f3fc399a919963b46c7d2b02fef506392f712ebe2336932552a2 files/digest-drbd-8.0_pre4 238
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.4 (GNU/Linux)
 
-iD8DBQFE2ybNgMUyd/cdjWsRAiDBAJ9SslJwSisVzBYRsv90c/GzuhJE5wCfYDNl
-imSsx1p/Gs7IULNASGZIizw=
-=kuby
+iD8DBQFE20tYgMUyd/cdjWsRAqxzAJ9eTWiXlr6p4NHjiNJgUbeRlonaawCgjhRK
+1TFRmwamYTnuL38LJKXfyt8=
+=ro/7
 -----END PGP SIGNATURE-----
