@@ -1,0 +1,3 @@
+MD5 17bfc263852db38fa9e51e02eb264e43 drbd-0.7.21.tar.gz 296960
+RMD160 331c887d61f2da3bd63dcd25dfe8fede3659efda drbd-0.7.21.tar.gz 296960
+SHA256 f0b01c6504754619ad388c3e82d2ca4842d1071f62e2d879abb027025efe43ca drbd-0.7.21.tar.gz 296960
