@@ -1,0 +1,3 @@
+MD5 7b24242597287c4d4245059ce7ac3e61 drbd-8.0pre4.tar.gz 430080
+RMD160 d830dc0b91228147d41d30371c8217d090dddbbf drbd-8.0pre4.tar.gz 430080
+SHA256 8efa75c90db1af095aed8306d0d07caec31f4d55f9482c739dbf3c96f805d258 drbd-8.0pre4.tar.gz 430080
