@@ -1,6 +1,13 @@
 # ChangeLog for sys-cluster/drbd
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/drbd/ChangeLog,v 1.49 2006/08/10 11:24:42 xmerlin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/drbd/ChangeLog,v 1.50 2006/08/10 14:00:31 xmerlin Exp $
+
+*drbd-8.0_pre4 (10 Aug 2006)
+*drbd-0.7.21 (10 Aug 2006)
+
+  10 Aug 2006; Christian Zoffoli <xmerlin@gentoo.org> +drbd-0.7.21.ebuild,
+  +drbd-8.0_pre4.ebuild:
+  Version bumps.
 
   18 Jul 2006; Christian Zoffoli <xmerlin@gentoo.org> drbd-0.7.20.ebuild:
   Stable x86.
